Updates: Improved the project overview

--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@astrojs/partytown": "^2.0.4",
     "@astrojs/rss": "^4.0.1",
     "@resvg/resvg-js": "^2.6.0",
+    "@vercel/speed-insights": "^1.0.12",
     "astro": "^4.1.1",
-    "caniuse-lite": "",
+    "caniuse-lite": "^1.0.30001643",
     "fuse.js": "^7.0.0",
     "github-slugger": "^2.0.0",
     "rehype-katex": "^7.0.0",
